# tfhe

./: .gitignore  Makefile  config.cfg  xrt.ini
src/: CMakeLists.txt
src/include/: constants.h  fft.h  fpga.h  fpga_constants.h  lagrangehalfc_arithmetic.h  polynomials.h  tfhe_core.h  tfhe_gate_bootstrapping_functions.h  tgsw_functions.h  tlwe_functions.h
src/kernels/: IntPolynomial_ifft.cpp  IntPolynomial_ifft_loop.cpp  TorusPolynomial_fft.cpp  TorusPolynomial_ifft.cpp  fft_transform.cpp  fft_transform_reverse.cpp  first2.cpp  second3.cpp  tGswFFTExternMulToTLwe.cpp  tGswTorus32PolynomialDecompH.cpp  tGswTorus32PolynomialDecompH_l.cpp  tLweFFTAddMulRTo.cpp  tLweFFTAddMulRTo_loop.cpp  tLweFFTClear.cpp  tLweFromFFTConvert.cpp  tfhe_MuxRotate_FFT.cpp  tfhe_blindRotate_FFT.cpp
src/kernels/include/: fpga_constants.h
src/libtfhe/: CMakeLists.txt  autogenerated.cpp  fft.cpp  fpga.cpp  lwe-bootstrapping-functions-fft.cpp  lwe-bootstrapping-functions.cpp  multiplication.cpp  polynomials.cpp  tfhe_gate_bootstrapping.cpp  tgsw-fft-operations.cpp  tgsw-functions.cpp  tlwe-fft-operations.cpp  tlwe-functions.cpp  tlwe.cpp  toruspolynomial-functions.cpp
src/libtfhe/fft_processor/: fft.h  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h
src/libtfhe/fft_processors/: CMakeLists.txt
src/libtfhe/fft_processors/fpga/: CMakeLists.txt  fft-fpga.cpp  fft-fpga.hpp  fft.c  fft.cpp  fft.h  fft_processor_fpga.cpp  fft_processor_nayuki.cpp  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h
src/libtfhe/fft_processors/fpga/kernels/: constants.h  fft_transform_reverse.cpp
src/libtfhe/fft_processors/nayuki/: fft_processor_nayuki.cpp  lagrangehalfc_impl.h
src/libtfhe/kernels/: fft_transform.cpp  fft_transform_reverse.cpp
src/test/: CMakeLists.txt  bootstrapping_test.cpp  bootstrapping_test_fft.cpp  lagrangehalfc_test.cpp  polynomial_test.cpp  test-MulToTLwe.cpp  test-addition-boot.cpp  test-bootstrapping-fft.cpp  test-decomp-tgsw.cpp  test-gate-bootstrapping.cpp  test-multiplication.cpp  test-tlwe.cpp  tgsw_fft_test.cpp  tgsw_test.cpp  tlwe_fft_test.cpp  tlwe_test.cpp
src/test/fakes/: lagrangehalfc.h  lwe-bootstrapping-fft.h  lwe-bootstrapping.h  tgsw-fft.h  tgsw.h  tlwe-fft.h  tlwe.h
